# llvm_learn

mlir/: WORKSPACE  codegen.toy  package-lock.json  test.toy
mlir/bazel/: repositories.bzl
mlir/dialect/: AST.cc  BUILD.bazel  Dialect.cpp  Dialect.h  LowerToAffineLoops.cpp  MLIRGen.cpp  Ops.td  Passes.h  ShapeInferenceInterface.h  ShapeInferencePass.cpp  ToyCombine.cpp  toy.cc
mlir/llvm/: workspace.bzl
